Sun Mar 15 14:50:21 CST 1998  Larry Ewing  <lewing@gimp.org>

	* app/fileops.c (file_save_as_callback): fixed file Save As
	cancel callback to use gtk_signal_connect_object. 

Sun Mar 15 13:37:22 MET 1998 Sven Neumann <sven@gimp.org>
	
	* libgimp/gimpwire.c: applied Raphael Quinet's patch that
	  changes the wire_read error message to something slightly more 
	  useful. 

Sun Mar 15 01:12:06 PST 1998 Manish Singh <yosh@gimp.org>

	* made 0.99.21 release

Sun Mar 15 02:06:18 CST 1998  Larry Ewing  <lewing@gimp.org>

	* app/layers_dialog.c: pass layer_ID instead of layer_widget to
	rename funtion to prevent dereferencing freed mem. Fixes layer
	rename bug.

Sun Mar 15 06:15:37 1998  Tim Janik  <timj@gimp.org>

	* app/gimage.c (gimage_remove_layer): check whether the removed layer
	is floating_sel *and* check whether it is active_layer.

	* plug-ins/exchange/exchange.c (doDialog): also destroy the main dialog
	if the "Cancel" button is clicked.

	* plug-ins/flame/flame.c: use gtk_quit_add_destroy instead of
	gtk_quit_add (,gtk_widget_destroy,), i should have really known
 	better since i wrote gtk_quit_add_destroy() exclusively for the gimp ;)
	* app/tips_dialog.c (tips_dialog_create): likewise.
	* app/indexed_palette.c (indexed_palette_create): likewise.
	* app/fileops.c (file_open_callback): likewise.
	* app/fileops.c	(file_save_as_callback): likewise.

Sun Mar 15 03:54:58 1998  Tim Janik  <timj@gimp.org>

	* plug-ins/AlienMap/AlienMap.c: show/hide about dialog, don't affect
	the main dialog.

	* plug-ins/flame/flame.c (edit_callback): hide the dialog on delete.
	(make_file_dlg): hide the dialog on delete.

	* plug-ins/ifscompose/ifscompose.c (ifs_options_dialog): hide the dialog
	on delete.

	* app/interface.c (toolbox_delete): handle WM delete of toolbox
	correctly.
	(gdisplay_delete): don't close image window without confirmation.

Sat Mar 14 18:38:26 PST 1998 Manish Singh <yosh@gimp.org>

        * app/iscissors.c: new, improved, still buggy iscissors!
