@@ -1,3 +1,9 @@
+Sun Mar 15 20:39:12 CST 1998  Larry Ewing  <lewing@gimp.org>
+
+	* app/undo.c (undo_pop_layer_displace): removed what seemed to be
+	an extra call to drawable_update on the layer, and added a call to
+	update the layer->mask.
+
 Sun Mar 15 14:50:21 CST 1998  Larry Ewing  <lewing@gimp.org>
 
 	* app/fileops.c (file_save_as_callback): fixed file Save As
